--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ h3 {
 }
 h1 {
 	font-size: 1.875em;
+	padding: 0 3em;
 }
 h2 {
 	font-size: 1.125;
@@ -49,24 +50,29 @@ header {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
 }
 
 header h1 {
+	width: 100%;
 	margin: 0;
-	padding: 2.375em 0;
+	padding: 0.5em 0;
+	border-bottom: 3px #77a466 solid;
 }
+
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 2.875em 0;
+	padding: 1em 0;
+	display: flex;
+	justify-content: content;
 }
 header nav ul {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	margin: 0;
 	padding: 0;
 }
@@ -75,6 +81,7 @@ header nav ul li {
 	font-weight: 700;
 	font-size: 0.875em;
 	padding: 0 0.625em;
+	margin: 1em;
 	display: inline;
 }
 header nav ul li a{
@@ -87,8 +94,7 @@ header nav ul li a{
 .bottom-section {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	width: 90%;
 	margin: 0 auto;
 }
 
@@ -97,6 +103,7 @@ header nav ul li a{
 }
 .main-image img {
 	width: 100%;
+	border-top: 3px solid #77a466;
 	border-bottom: 3px solid #77a466;
 }
 
@@ -117,7 +124,6 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-	width: 33%;
 	height: auto;
 	border-top: 1px solid #eee;
 }
@@ -126,14 +132,9 @@ header nav ul li a{
 	padding: 0.625em 0;
 }
 
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
 .section-two h3,
 .section-three h3 {
-	padding: 0.625em 1.875em;
+	padding: 0.625em 0.625em;
 }
 
 .menu {
@@ -149,6 +150,7 @@ header nav ul li a{
 	color: #333;
 	font-size: 1em;
 	line-height: 1.5em;
+	padding: 0;
 }
 
 .address {
