--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,8 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	max-width: 90%;
+	width: 90%;
+	max-width: 1200px;
 	margin: 0 auto;
 }
 
@@ -49,6 +50,8 @@ header {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	width: 100%;
+	text-align: center;
 	align-items: center;
 	margin: 0 auto;
 }
@@ -94,7 +97,7 @@ header nav ul li a{
 .bottom-section {
 	display: flex;
 	flex-direction: column;
-	width: 90%;
+	width: 100%;
 	margin: 0 auto;
 }
 
